force-app/main/default/objects/ProductItem__c/ProductItem__c.object-meta.xml
<CustomObject>
    <label>Product Item</label>
    <nameField>
        <label>Product Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>