force-app/main/default/objects/ProductItem__c/fields/Pickup__c.field-meta.xml
<CustomField>
    <fullName>Pickup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pickup</label>
    <referenceTo>Pickup__c</referenceTo>
    <relationshipLabel>Product Items</relationshipLabel>
    <relationshipName>ProductItems</relationshipName>
    <type>Lookup</type>
</CustomField>