force-app/main/default/objects/ProductItem__c/fields/TotalDeliveries__c.field-meta.xml
<CustomField>
    <fullName>TotalDeliveries__c</fullName>
    <label>Total Deliveries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>