force-app/main/default/objects/ProductItem__c/fields/TotalRequested__c.field-meta.xml
<CustomField>
    <fullName>TotalRequested__c</fullName>
    <label>Total Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>